# Prog_8V41_BEM_lab7

./: CMakeLists.txt  README.md  main.cpp
assert/: CMakeLists.txt  main.cpp  main_old.cpp
ctest/: CMakeLists.txt
ctest/tests/: test_1.cpp  test_2.cpp  test_3.cpp
gtest/: CMakeLists.txt  tests.cpp
headers/: task_1.hpp  task_2.hpp  task_3.hpp  task_4.hpp  task_5.hpp  task_6.hpp  task_7.hpp  task_8.hpp
tasks/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp
